--- a/Launcher Source/Launcher/MainWindow.xaml
+++ b/Launcher Source/Launcher/MainWindow.xaml
@@ -5,25 +5,45 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Launcher"
         mc:Ignorable="d"
-        Title="The Hutries" Height="400" Width="400" Icon="iconblack.ico" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Cursor="Arrow" FontSize="16" FontFamily="Malgun Gothic">
+        Title="The Hutries" Height="400" Width="404.5" Icon="iconblack.ico" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Cursor="Arrow" FontSize="16" FontFamily="Malgun Gothic">
     <Window.Effect>
         <DropShadowEffect BlurRadius="15" Direction="323" RenderingBias="Quality"/>
     </Window.Effect>
-    <Grid>
+    <Grid Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="50*"/>
+            <ColumnDefinition Width="97*"/>
+            <ColumnDefinition Width="50*"/>
+        </Grid.ColumnDefinitions>
         <Grid.ContextMenu>
             <ContextMenu/>
         </Grid.ContextMenu>
-        <ComboBox x:Name="resolution" HorizontalAlignment="Left" Margin="121,161,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="resolution_SelectionChanged" Cursor="Hand">
-            <ComboBoxItem Cursor="Hand">1360 x 768</ComboBoxItem>
-            <ComboBoxItem Cursor="Hand">1366 x 768</ComboBoxItem>
-            <ComboBoxItem Cursor="Hand">1920 x 1080</ComboBoxItem>
-            <ComboBoxItem Cursor="Hand">1920 x 1200</ComboBoxItem>
-            <ComboBoxItem Cursor="Hand">2560 x 1600</ComboBoxItem>
+        <Canvas Grid.ColumnSpan="3">
+            <Canvas.Background>
+                <ImageBrush ImageSource="castle.png" Opacity="0.4" Stretch="UniformToFill">
+                    <ImageBrush.RelativeTransform>
+                        <TransformGroup>
+                            <ScaleTransform CenterY="0.5" CenterX="0.5" ScaleX="1.5" ScaleY="1.5"/>
+                            <SkewTransform CenterY="0.5" CenterX="0.5"/>
+                            <RotateTransform CenterY="0.5" CenterX="0.5"/>
+                            <TranslateTransform X="0.3" Y="0.25"/>
+                        </TransformGroup>
+                    </ImageBrush.RelativeTransform>
+                </ImageBrush>
+            </Canvas.Background>
+        </Canvas>
+        <ComboBox x:Name="resolution" Margin="25,162,26,175" SelectionChanged="resolution_SelectionChanged" Cursor="Hand" Grid.Column="1">
+            <ComboBoxItem Cursor="Hand" Content="1360 x 768"/>
+            <ComboBoxItem Cursor="Hand" Content="1366 x 768"/>
+            <ComboBoxItem Cursor="Hand" Content="1920 x 1080"/>
+            <ComboBoxItem Cursor="Hand" Content="1920 x 1200"/>
+            <ComboBoxItem Cursor="Hand" Content="2560 x 1600"/>
         </ComboBox>
-        <CheckBox x:Name="fullscreen" Content="Fullscreen" HorizontalAlignment="Left" Margin="135,214,0,0" VerticalAlignment="Top" Checked="fullscreen_Checked" Unchecked="fullscreen_Unchecked" Cursor="Hand"/>
-        <Label x:Name="resolutionLabel" Content="Choose display resolution:" HorizontalAlignment="Left" Margin="86,114,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.104,-0.626"/>
-        <Image x:Name="TitleBox" HorizontalAlignment="Left" Margin="10,10,0,262" Width="372" RenderTransformOrigin="1.825,0.743" Source="title.png" Stretch="Fill"/>
-        <Button x:Name="playButton" Content="Play" HorizontalAlignment="Left" Margin="121,276,0,0" VerticalAlignment="Top" Width="120" FontSize = "30" Click="playButton_Click" Cursor="Hand"/>
+        <CheckBox x:Name="fullscreen" Content="Fullscreen" Margin="52,0,48,137.22" VerticalAlignment="Bottom" Checked="fullscreen_Checked" Unchecked="fullscreen_Unchecked" Cursor="Hand" Grid.Column="1" Height="20.28"/>
+        <Label x:Name="resolutionLabel" Content="Choose display resolution:" Margin="0,126,84,0" VerticalAlignment="Top" RenderTransformOrigin="-0.104,-0.626" Height="31" Grid.ColumnSpan="2" Grid.Column="1"/>
+        <Image x:Name="TitleBox" Margin="10,10,12,0" RenderTransformOrigin="1.825,0.743" Source="title.png" Stretch="Fill" Grid.ColumnSpan="3" Height="99" VerticalAlignment="Top" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin"/>
+        <Button x:Name="playButton" Content="Play" Margin="40,0,39,48.097" VerticalAlignment="Bottom" FontSize = "30" Click="playButton_Click" Cursor="Hand" Grid.Column="1" Height="43.903"/>
+        <ToolBarOverflowPanel Grid.ColumnSpan="3" Height="104" Margin="10,10,12,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
