--- a/Launcher Source/Launcher/MainWindow.xaml
+++ b/Launcher Source/Launcher/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Launcher"
         mc:Ignorable="d"
-        Title="The Hutries" Height="400" Width="404.5" Icon="iconblack.ico" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Cursor="Arrow" FontSize="16" FontFamily="Malgun Gothic">
+        Title="The Hutries" Height="417.927" Width="404.5" Icon="iconblack.ico" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Cursor="Arrow" FontSize="16" FontFamily="Malgun Gothic">
     <Window.Effect>
         <DropShadowEffect BlurRadius="15" Direction="323" RenderingBias="Quality"/>
     </Window.Effect>
@@ -18,7 +18,7 @@
         <Grid.ContextMenu>
             <ContextMenu/>
         </Grid.ContextMenu>
-        <Canvas Grid.ColumnSpan="3">
+        <Canvas Grid.ColumnSpan="3" Height="389" VerticalAlignment="Top" Margin="3,0,-3,0">
             <Canvas.Background>
                 <ImageBrush ImageSource="castle.png" Opacity="0.4" Stretch="UniformToFill">
                     <ImageBrush.RelativeTransform>
@@ -31,18 +31,72 @@
                     </ImageBrush.RelativeTransform>
                 </ImageBrush>
             </Canvas.Background>
+            <TextBlock x:Name="textBlock" Canvas.Left="146" TextWrapping="Wrap" Canvas.Top="224">
+                <TextBlock.Effect>
+                    <DropShadowEffect Opacity="0.2"/>
+                </TextBlock.Effect><Run Text="Music Volume"/><Run Text=":"/></TextBlock>
+            <Slider x:Name="musicSlider" Canvas.Left="85" Canvas.Top="245" Width="220" Maximum="100" Value="100" AutoToolTipPlacement="BottomRight" SmallChange="1" LargeChange="10" ValueChanged="volume_SetMusic" TickFrequency="5" TickPlacement="BottomRight">
+                <Slider.Effect>
+                    <DropShadowEffect Opacity="0.2"/>
+                </Slider.Effect>
+            </Slider>
+            <TextBlock x:Name="textBlock1" Canvas.Left="76" TextWrapping="Wrap" Canvas.Top="242">
+                <TextBlock.Effect>
+                    <DropShadowEffect Opacity="0.2"/>
+                </TextBlock.Effect><Run Text="0"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="textBlock2" Canvas.Left="310" TextWrapping="Wrap" Canvas.Top="242">
+                <TextBlock.Effect>
+                    <DropShadowEffect Opacity="0.2"/>
+                </TextBlock.Effect><Run Text="100"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="textBlock_Copy" Canvas.Left="154" TextWrapping="Wrap" Canvas.Top="272" Text="SFX Volume">
+                <TextBlock.Effect>
+                    <DropShadowEffect Opacity="0.2"/>
+                </TextBlock.Effect>
+            </TextBlock>
+            <Slider x:Name="sfxSlider" Canvas.Left="85" Canvas.Top="293" Width="220" Maximum="100" Value="80" AutoToolTipPlacement="BottomRight" SmallChange="1" LargeChange="10" ValueChanged="volume_SetSFX" TickFrequency="5" TickPlacement="BottomRight">
+                <Slider.Effect>
+                    <DropShadowEffect Opacity="0.2"/>
+                </Slider.Effect>
+            </Slider>
+            <TextBlock x:Name="textBlock1_Copy" Canvas.Left="76" TextWrapping="Wrap" Canvas.Top="290">
+                <TextBlock.Effect>
+                    <DropShadowEffect Opacity="0.2"/>
+                </TextBlock.Effect><Run Text="0"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="textBlock2_Copy" Canvas.Left="310" TextWrapping="Wrap" Canvas.Top="290">
+                <TextBlock.Effect>
+                    <DropShadowEffect Opacity="0.2"/>
+                </TextBlock.Effect><Run Text="100"/><LineBreak/><Run/></TextBlock>
         </Canvas>
-        <ComboBox x:Name="resolution" Margin="25,162,26,175" SelectionChanged="resolution_SelectionChanged" Cursor="Hand" Grid.Column="1">
+        <ComboBox x:Name="resolution" Margin="25,145,26,208" SelectionChanged="resolution_SelectionChanged" Cursor="Hand" Grid.Column="1">
+            <ComboBox.Effect>
+                <DropShadowEffect Opacity="0.2"/>
+            </ComboBox.Effect>
             <ComboBoxItem Cursor="Hand" Content="1360 x 768"/>
             <ComboBoxItem Cursor="Hand" Content="1366 x 768"/>
             <ComboBoxItem Cursor="Hand" Content="1920 x 1080"/>
             <ComboBoxItem Cursor="Hand" Content="1920 x 1200"/>
             <ComboBoxItem Cursor="Hand" Content="2560 x 1600"/>
         </ComboBox>
-        <CheckBox x:Name="fullscreen" Content="Fullscreen" Margin="52,0,48,137.22" VerticalAlignment="Bottom" Checked="fullscreen_Checked" Unchecked="fullscreen_Unchecked" Cursor="Hand" Grid.Column="1" Height="20.28"/>
-        <Label x:Name="resolutionLabel" Content="Choose display resolution:" Margin="0,126,84,0" VerticalAlignment="Top" RenderTransformOrigin="-0.104,-0.626" Height="31" Grid.ColumnSpan="2" Grid.Column="1"/>
-        <Image x:Name="TitleBox" Margin="10,10,12,0" RenderTransformOrigin="1.825,0.743" Source="title.png" Stretch="Fill" Grid.ColumnSpan="3" Height="99" VerticalAlignment="Top" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin"/>
-        <Button x:Name="playButton" Content="Play" Margin="40,0,39,48.097" VerticalAlignment="Bottom" FontSize = "30" Click="playButton_Click" Cursor="Hand" Grid.Column="1" Height="43.903"/>
+        <CheckBox x:Name="fullscreen" Content="Fullscreen" Margin="50,0,50,177" VerticalAlignment="Bottom" Checked="fullscreen_Checked" Unchecked="fullscreen_Unchecked" Cursor="Hand" Grid.Column="1" Height="20">
+            <CheckBox.Effect>
+                <DropShadowEffect Opacity="0.2"/>
+            </CheckBox.Effect>
+        </CheckBox>
+        <Label x:Name="resolutionLabel" Content="Choose display resolution:" Margin="0,109,84,0" VerticalAlignment="Top" RenderTransformOrigin="-0.104,-0.626" Height="31" Grid.ColumnSpan="2" Grid.Column="1">
+            <Label.Effect>
+                <DropShadowEffect Opacity="0.195"/>
+            </Label.Effect>
+        </Label>
+        <Image x:Name="TitleBox" Margin="10,10,12,0" RenderTransformOrigin="1.825,0.743" Source="title.png" Stretch="Fill" Grid.ColumnSpan="3" Height="99" VerticalAlignment="Top" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin">
+            <Image.Effect>
+                <DropShadowEffect Opacity="0.2"/>
+            </Image.Effect>
+        </Image>
+        <Button x:Name="playButton" Content="Play" Margin="40,0,39,10" VerticalAlignment="Bottom" FontSize = "30" Click="playButton_Click" Cursor="Hand" Grid.Column="1" Height="44">
+            <Button.Effect>
+                <DropShadowEffect Opacity="0.2"/>
+            </Button.Effect>
+        </Button>
         <ToolBarOverflowPanel Grid.ColumnSpan="3" Height="104" Margin="10,10,12,0" VerticalAlignment="Top"/>
 
     </Grid>
